# AssetStudioWASM

./: .gitignore  .gitmodules  AssetStudioWASM.code-workspace  AssetStudioWASM.sln  LICENSE  README.md
AssetStudio.WebAdapter/: AssetStudio.WebAdapter.csproj  AssetStudioJsonContext.cs  JsApi.cs  WasmMain.cs  WebAssetProcessor.cs  WebAssetsManager.cs  WebLogger.cs  linker.xml
Texture2DDecoderNative.ImportBridge/: Texture2DDecoderNative.ImportBridge.csproj  Texture2DDecoderNative.ImportBridge.js  Texture2DDecoderNative.ImportBridge.props  TextureDecoder.cs
Texture2DDecoderNative.WebAdapter/: CMakeLists.txt
test/: index.html
